@@ -1,3 +1,8 @@
+2009-05-19  Michael Banck  <mbanck@gmx.net>
+
+	* src/formats/gaussformat.cpp (ReadMolecule): Add parsing of NMR
+	isotropic shifts.  Patch by David C. Lonie.  Fixes PR#2787088.
+
 2009-05-12  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/generic.cpp (OBUnitCell::FillUnitCell): Update with code
